--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   firebase_auth: ^6.1.0
   firebase_core: ^4.1.1
   cloud_firestore: ^6.0.2
+  google_sign_in: ^6.2.1
+  sign_in_with_apple: ^6.1.1
+  flutter_svg: ^2.2.1
 
 dev_dependencies:
   flutter_test:
@@ -27,6 +30,6 @@ flutter:
   generate: true
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/images/
+     - assets/icons/
