Update app display name to 'Itmam' (English) and 'إتمام' (Arabic)
- Updated localization files (app_en.arb, app_ar.arb) with new app title
- Added localized string resources for Android (values/strings.xml, values-ar/strings.xml)
- Updated AndroidManifest.xml to use localized app name
- Added InfoPlist.strings for iOS localization (en.lproj, ar.lproj)
- Updated iOS Info.plist and Xcode project configuration
- Updated web manifest and HTML title
- Updated macOS app name configuration

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "qadaa_prayer_tracker",
-    "short_name": "qadaa_prayer_tracker",
+    "name": "Itmam",
+    "short_name": "Itmam",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
