--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   generate: true
@@ -33,3 +34,15 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  web:
+    generate: true
+    image_path: "assets/icons/Itmam_logo_white_bg.png"
+    background_color: "#ffffff"
+    theme_color: "#0175C2"
+  image_path: "assets/icons/Itmam_logo_white_bg.png"
+  min_sdk_android: 21
+  remove_alpha_ios: true
