--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   google_sign_in: ^6.2.1
   sign_in_with_apple: ^6.1.1
   flutter_svg: ^2.2.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +35,22 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+
+  fonts:
+    - family: Araboto
+      fonts:
+        - asset: assets/fonts/Araboto-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/Araboto-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Araboto-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Araboto-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Araboto-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Araboto-Black.ttf
+          weight: 900
 
 flutter_launcher_icons:
   android: true
