Change app bundle ID to com.itmam.app and fix Google Sign-In configuration
- Update bundle ID from com.example.itmam to com.itmam.app across all platforms
- Update Android applicationId and namespace in build.gradle
- Move MainActivity.kt to new package structure (com.itmam.app)
- Update iOS and macOS bundle identifiers
- Update Firebase configuration files (google-services.json, GoogleService-Info.plist)
- Fix Google Sign-In clientId to be iOS-only (Android reads from google-services.json)
- Update URL scheme in Info.plist for new OAuth client ID
- Update Apple Sign-In clientId to match new bundle ID

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -9,12 +9,12 @@ plugins {
 }
 
 android {
-    namespace "com.example.itmam"
+    namespace "com.itmam.app"
     compileSdk 36
     ndkVersion "27.0.12077973"
 
     defaultConfig {
-        applicationId "com.example.itmam"
+        applicationId "com.itmam.app"
         minSdkVersion flutter.minSdkVersion
         targetSdk 36
         versionCode flutter.versionCode
